tests/sksl/errors/golden/ReturnTypeMismatch.glsl
### Compilation failed:

error: 2: expected 'int', but found 'float'
1 error
